<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="5sp"
    android:layout_margin="5sp"
    android:id="@+id/card_rec"
    android:layout_height="wrap_content">
    <LinearLayout
        android:showDividers="middle"
        android:divider="@color/black"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:background="#22000000"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:id="@+id/item_image"
            android:src="@drawable/ic_second"
            android:transitionName="@string/image"
            />
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@color/black"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/part_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/part_name"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:maxLines="1"/>
            </LinearLayout>
            <LinearLayout
                android:showDividers="middle"
                android:divider="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/version_code"
                    android:paddingStart="3sp"
                    android:paddingEnd="3sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:paddingStart="3sp"
                    android:paddingEnd="3sp"
                    android:id="@+id/last_modified"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/latest_modified"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>