<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3sp">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_by_performance"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <MultiAutoCompleteTextView
            android:id="@+id/check_by_performance"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:hint="@string/perfotmancce_number"
            android:inputType="number"
            android:layout_weight="1"
            android:fadingEdgeLength="3sp"
            android:completionThreshold="1"
            />
        <Button
            android:id="@+id/performance_listen"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:background="@drawable/bounder2"
            android:text="@string/sond_listening"
            android:gravity="center"/>
    </LinearLayout>
</android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:id="@+id/performance_list"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/check_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="30sp"
            app:layout_anchor="@id/performance_list"
            app:layout_anchorGravity="bottom|end"
            app:layout_behavior="com.tec.zhang.prv.ScrollingFABBehavior"
            android:src="@drawable/ic_arrow_forward"/>
            <!--app:layout_behavior="com.tec.zhang.prv.Behavior"-->

    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>